--- a/src/main/resources/frontend/index.html
+++ b/src/main/resources/frontend/index.html
@@ -12,12 +12,12 @@
 <h1>Login page</h1>
 
 
-<form onsubmit="login(event)">
+<form id="login-form"  onsubmit="login(event)">
     <input type="text" id="username-input" placeholder="Username"/>
     <input type="password" id="password-input" placeholder="Password">
     <!-- <input type="text" id="role-input" placeholder="ROLE"> -->
     <button>Login</button>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </form>
 
 
